reconfigured tasks to include files with properties

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "iostream": "cpp",
         "xstring": "cpp",
         "map": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "bits/stdc++": "cpp"
+        
     }
 }
