--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "xstring": "cpp",
         "map": "cpp",
         "unordered_map": "cpp",
-        "bits/stdc++": "cpp"
-        
+        "bits/stdc++": "cpp",
+        "string": "cpp"
     }
 }
